[project]
name = "pyOMA_2"
version = "0.3.0"
description = "Software for Structural Health Monitoring with Advanced Signal Processing Techniques"
authors = [
    {name = "Dag Pasca", email = "dpa@treteknisk.no"},
    {name = "Marco Martino Rosso", email = "marco.rosso@polito.it"},
    {name = "Diego Federico Margoni", email = "diegofederico.margoni@studenti.polito.it"},
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scipy>=1.9.3",
    "pydantic>=2.5.1",
    "tqdm>=4.66.1",
    "matplotlib>=3.7.4",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
Homepage = "https://github.com/dagghe/pyOMA2"
Documentation = "https://dagghe.github.io/pyOMA2/index.html"
Repository = "https://github.com/dagghe/pyOMA2"
Changelog = "https://github.com/dagghe/pyOMA2/blob/main/CHANGELOG.md"
Contributing = "https://github.com/dagghe/pyOMA2/blob/main/CONTRIBUTING.md"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.isort]
split_on_trailing_comma = true
multi_line_output = 3
line_length = 90
profile="black"

[tool.black]
line-length = 90

[tool.pdm.dev-dependencies]
docs = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=2.0.0",
    "ghp-import>=2.1.0",
    "nbsphinx>=0.9.3",
    "pandoc>=2.3",
]
qa = [
    "pre-commit>=3.5.0",
    "ipdb>=0.13.13",
    "pytest>=7.4.4",
]
